# scripts_tools_projects

./: 28-abs  28-abs.cpp  29-sum  29-sum.cpp  README.md  fb_odd  fizzbuzz_odd.cpp  template_test  template_test.cpp
c/: README.md
c/pub04str_to_hex/: pub04str_to_hex-test  pub04str_to_hex.c
c/pub04str_to_hex/test/: pub04str_to_hex-main.c
cpp/: 28-abs.cpp  README.md  heap_str_status.cpp
cpp/netrunner_card_finder/: .gitignore  AUTHORS  CMakeLists.txt  image_grabber.py  main.cpp  mainwindow.cpp  mainwindow.ui
leetcode/: 0001-two_sum.cpp  0002-add_two_numbers.cpp  0003-longest_substring_without_repeating_characters.cpp  0007-reverse_number.cpp  0008-string_to_integer_(atoi).cpp  0009-palindrome_number.cpp  0011-container_with_most_water.cpp  0017-letter_combinations_of_a_phone_number.cpp  0019-remove_nth_node_from_end_of_list.cpp  0021-merge_two_sorted_lists.cpp  0024-swap_nodes_in_pairs.cpp  0027-remove_element.cpp  0028-find_the_index_of_the_first_occurrence_in_a_string.cpp  0028-find_the_index_of_the_first_occurrence_in_a_string.py  0035-search_insert_position.cpp  0058-length_of_last_word.cpp  0061-rotate_list.cpp  0066-plus_one.cpp  0070-climbing_stairs.cpp  0083-remove_duplicates_from_sorted_list.cpp  0136-single_number.cpp  0231-power_of_two.cpp  0237-delete_node_in_a_linked_list.cpp  0661-image_smoother.cpp  136-single_number.cpp  2-add_two_numbers.cpp  231-power_of_two.cpp  28-find_the_index_of_the_first_occurrence_in_a_string.cpp  661-image_smoother.cpp  70-climbing_stairs.cpp
netrunner_card_finder/: README.md
netrunner_card_finder/include/: mainwindow.h
yeee_codewars/: 20250204-create_phone_number.c
